# CSP_solver

./: .gitignore  CMakeLists.txt  README.md  arbre_dom.cpp  arbre_dom.h  build_in_problems.cpp  build_in_problems.h  coloration.cpp  coloration.h  contrainte.cpp  contrainte.h  csp.cpp  csp.h  generate_graphs.py  interface.cpp  interface.h  main.cpp
